base-setup/init.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: instruments
---
apiVersion: v1
kind: Namespace
metadata:
  name: player-backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: player-ui
